--- a/isucondition.conf
+++ b/isucondition.conf
@@ -1,3 +1,8 @@
+upstream app {
+    server isu1:3000;
+    server isu3:3000;
+}
+
 server {
     listen 443 ssl http2;
 
@@ -6,6 +11,13 @@ server {
 
     location / {
         proxy_set_header Host $http_host;
-        proxy_pass http://127.0.0.1:3000;
+        proxy_pass http://app;
+    }
+
+    location ~ \/api\/isu\/(.+?)\/icon {
+        proxy_set_header Host $http_host;
+        proxy_pass http://app;
+        expires 2m;
+        add_header Cache-Control public;
     }
 }
