proxy initialize to only isu1

--- a/isucondition.conf
+++ b/isucondition.conf
@@ -13,6 +13,12 @@ server {
         proxy_set_header Host $http_host;
         proxy_pass http://app;
     }
+ 
+    location /initialize {
+        proxy_set_header Host $http_host;
+        proxy_pass http://isu1:3000;
+    }
+
 
     location ~ \/api\/isu\/(.+?)\/icon {
         proxy_set_header Host $http_host;
