weighted round robin

--- a/isucondition.conf
+++ b/isucondition.conf
@@ -1,6 +1,7 @@
 upstream app {
-    server isu1:3000;
-    server isu3:3000;
+    server isu1:3000 weight=8;
+    server isu3:3000 weight=10;
+    server isu2:3000 weight=3;
 }
 
 server {
