--- a/.inputrc
+++ b/.inputrc
@@ -37,6 +37,9 @@ $if mode=emacs
 # "\e[5~": beginning-of-history
 # "\e[6~": end-of-history
 
+"\e[B": history-search-forward
+"\e[A": history-search-backward
+
 # alternate mappings for "page up" and "page down" to search the history
 # "\e[5~": history-search-backward
 # "\e[6~": history-search-forward
