--- a/isucondition.conf
+++ b/isucondition.conf
@@ -1,7 +1,7 @@
 upstream app {
     server isu1:3000 weight=8;
-    server isu3:3000 weight=10;
-    server isu2:3000 weight=3;
+    #server isu3:3000 weight=10;
+    #server isu2:3000 weight=3;
 }
 
 server {
@@ -9,26 +9,15 @@ server {
 
     ssl_certificate /etc/nginx/certificates/tls-cert.pem;
     ssl_certificate_key /etc/nginx/certificates/tls-key.pem;
+ 
+    location /initialize {
+        proxy_set_header Host $http_host;
+        proxy_pass http://isu1:3000;
+    }
 
     location / {
         proxy_set_header Host $http_host;
         proxy_pass http://app;
     }
- 
-    location /initialize {
-        proxy_set_header Host $http_host;
-        proxy_pass http://isu1:3000;
-    }
- 
-    location /initialize {
-        proxy_set_header Host $http_host;
-        proxy_pass http://isu1:3000;
-    }
-
-    location ~ \/api\/isu\/(.+?)\/icon {
-        proxy_set_header Host $http_host;
-        proxy_pass http://app;
-        expires 2m;
-        add_header Cache-Control public;
-    }
 }
+
