--- a/isucondition.conf
+++ b/isucondition.conf
@@ -19,5 +19,12 @@ server {
         proxy_set_header Host $http_host;
         proxy_pass http://app;
     }
+
+    location /assets {
+        root /home/isucon/webapp/public/;
+        sendfile on;
+        tcp_nopush on;
+        expires 1d;
+    }
 }
 
