--- a/my.cnf
+++ b/my.cnf
@@ -22,12 +22,18 @@
 !includedir /etc/mysql/conf.d/
 !includedir /etc/mysql/mariadb.conf.d/
 
+
 [server]
 bind-address            = 0.0.0.0
 
-slow_query_log
+slow_query_log         = 1
 slow_query_log_file    = /var/log/mysql/mariadb-slow.log
 long_query_time        = 0
 log_slow_rate_limit    = 1
 log_slow_verbosity     = query_plan
 log-queries-not-using-indexes
+
+innodb_buffer_pool_size = 1G
+innodb_flush_log_at_trx_commit = 0
+innodb_flush_method=O_DIRECT
+
