disable log + distribute

--- a/isucondition.conf
+++ b/isucondition.conf
@@ -1,6 +1,6 @@
 upstream app {
     server isu1:3000 weight=8;
-    #server isu3:3000 weight=10;
+    server isu3:3000 weight=12;
     #server isu2:3000 weight=3;
 }
 
