--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,7 @@ http {
                 "\truntime:$upstream_http_x_runtime"
                 "\tapptime:$upstream_response_time"
                 "\tvhost:$host";
-    access_log /var/log/nginx/access.log ltsv;
+    #access_log /var/log/nginx/access.log ltsv;
 
     sendfile        on;
     #tcp_nopush     on;
